社区页面社区人口修改

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
@@ -5,7 +5,7 @@
         <ul class="sqrk-ul flex" id="society-person">
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqrk_icon1.png"></div>
-                <div class="item-r"><div class="item-r-name">实时总人数</div><div class="item-r-data testAerial">2,773</div></div>
+                <div class="item-r"><div class="item-r-name">总人数</div><div class="item-r-data testAerial">2,773</div></div>
             </li>
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqrk_icon2.png"></div>
