事件成功列表时间

--- a/Lingang.City.Brain/View/SocietyNew/Center_01_Info.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_01_Info.html
@@ -3,7 +3,7 @@
     <div class="statistic-slidediv">
         <div class="pjc-statistic" style="z-index:999;display:block;">
             <dl>
-                <dt>实时总人数</dt>
+                <dt>常住人数</dt>
                 <dd class="testAerial"><span id="s_bignum1">0</span></dd>
                 <dt>停车</dt>
                 <dd class="testAerial"><span id="s_bignum2">0</span></dd>
