--- a/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
@@ -15,8 +15,8 @@
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>车辆：</span><em class="testAerial" id="total_car">0</em></div>
-                    <div class=""><span>进临港：</span><em class="testAerial" id="total_normalCar">0</em></div>
-                    <div class=""><span>出临港：</span><em class="testAerial" id="total_illegalCar">0</em></div>
+                    <div class=""><span>进港：</span><em class="testAerial" id="total_normalCar">0</em></div>
+                    <div class=""><span>出港：</span><em class="testAerial" id="total_illegalCar">0</em></div>
                 </div>
             </li>
             <li class="sxt-li sxt-li6" id="sqzz-sxt3">
