停车场使用情况

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone1.html
@@ -13,7 +13,7 @@
             </li>
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-13.png"></div>
-                <div class="item-r"><div class="item-r-name">巡飞时间（小时）</div><div class="item-r-data testAerial" id="sqrk_drone3">256</div></div>
+                <div class="item-r"><div class="item-r-name">巡飞时间（分钟）</div><div class="item-r-data testAerial" id="sqrk_drone3">256</div></div>
             </li>
         </ul>
         <div class="wrj-left">
