--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone3.html
@@ -8,7 +8,7 @@
                     <div class="item-l"><img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>杨育峰</span></li>
+                            <li><div>姓名：</div><span>杨育峰</span></li>
                             <li><div>性&nbsp;别：</div><span>男</span></li>
                             <li><div>职&nbsp;位：</div><span>组长</span></li>
                         </ul>
