--- a/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
@@ -14,7 +14,7 @@
             <li class="sxt-li sxt-li5" id="sqzz-sxt2">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
-                    <div class=""><span>车辆：</span><em class="testAerial" id="total_car">39307</em></div>
+                    <div class=""><span>总车辆：</span><em class="testAerial" id="total_car">39307</em></div>
                     <div class=""><span>进港：</span><em class="testAerial" id="total_normalCar">21204</em></div>
                     <div class=""><span>出港：</span><em class="testAerial" id="total_illegalCar">18103</em></div>
                 </div>
