--- a/Lingang.City.Brain/View/SocietyNew/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_Menu.html
@@ -3,8 +3,8 @@
     <li class="">摄像头</li>
     <li class="">无人机</li>
     <li class="">村居工作站</li>
-    <!--<li class="">海岸线</li>-->
-    <!--<li class="">工地</li>
+    <!--<li class="">海岸线</li>
+    <li class="">工地</li>
     <li class="">街面</li>
     <li class="">网格</li>-->
     <li class="active">事件</li>
