--- a/Lingang.City.Brain/View/TourNew/Right_First_01.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_01.html
@@ -3,9 +3,9 @@
     <h3><div id="renche">人员车辆统计</div></h3>
     <div class="divcont">
         <div class="rycltj-tabbox flex">
-            <button class="active" id="ry">出入园人数统计</button>
-            <button class=""id="dt">地铁人数统计</button>
-            <button class="" id="jccl">进出临港车辆统计</button>
+            <button class="active" id="ry" onclick="require('t_Home').ryClickEvent('ry');">出入园人数统计</button>
+            <button class="" id="dt" onclick="require('t_Home').ryClickEvent('dt');">地铁人数统计</button>
+            <button class="" id="jccl" onclick="require('t_Home').ryClickEvent('jccl');">进出临港车辆统计</button>
         </div>
         <!--<div class="jtxx-tabbox clearfix" id="rq">
             <a class="jtxx-tab active">2月2日</a>
