社综---海岸线视频接入，产业园区事件列表

--- a/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
@@ -3,10 +3,10 @@
     <h3><div>事件统计</div></h3>
     <div class="divcont">
         <div class="flex sjxx-tab">
-            <button type="button" class="active">总数：<span class="testAerial">20</span></button>
-            <button type="button">已处理：<span class="testAerial" id="processed">18</span></button>
-            <button type="button">待处理：<span class="testAerial" id="Untreated">1</span></button>
-            <button type="button">处理中：<span class="testAerial" id="in-process">1</span></button>
+            <button type="button" class="active">总数：<span class="testAerial" id="parkingEnvent-total">20</span></button>
+            <button type="button">已处理：<span class="testAerial" id="parkingEnvent-finished">18</span></button>
+            <button type="button">待处理：<span class="testAerial" id="parkingEnvent-accepted">1</span></button>
+            <button type="button">处理中：<span class="testAerial" id="parkingEnvent-processing">1</span></button>
         </div>
         <div class="cy-ly-rr1-divbox scrolldiv" id="yq-sjtj">
             <ul class="cy-ly-rr1-ul" style="height:100%;" id="ul-parkingEnvent">
