--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet1.html
@@ -3,10 +3,10 @@
     <h3><div>街面基本信息</div></h3>
     <div class="divcont">
         <ul class="sqzz-wrjjm-lr1-ul flex">
-            <li class="sqzz-hax-lr1-li"><button><div>商户数</div><span class="testAerial">252</span></button></li>
-            <li class="sqzz-hax-lr1-li"><button><div>事件数</div><span class="testAerial">21</span></button></li>
-            <li class="sqzz-hax-lr1-li"><button><div>街长度</div><span class="testAerial">10公里</span></button></li>
-            <li class="sqzz-hax-lr1-li"><button><div>权责归属</div><span class="testAerial">*******</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>商户数</div><span class="testAerial" id="jm_basicinfo_1">252</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>事件数</div><span class="testAerial"id="jm_basicinfo_2">21</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>街长度</div><span class="testAerial" id="jm_basicinfo_3">10公里</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>权责归属</div><span class="testAerial" id="jm_basicinfo_4">*******</span></button></li>
         </ul>
     </div>
 </div>
