--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
@@ -18,7 +18,7 @@
         </ul>
         <div class="wrj-left">
             <ul class="wrj-ul">
-                <li class="wrj-li  prism-player"  id="Society_JmDrone"></li>
+                <li class="wrj-li  prism-player"  id="StreetWrjVideo"></li>
                 <!--<li class="wrj-li"></li>
                 <li class="wrj-li"></li>-->
             </ul>
