--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
@@ -34,9 +34,9 @@
         </ul>
         <div class="wrj-left">
             <ul class="wrj-ul">
-                <li class="wrj-li"></li>
-                <li class="wrj-li"></li>
-                <li class="wrj-li"></li>
+                <li class="wrj-li prism-player"  id="WorkSiteWrjVideo"></li>
+                <!--<li class="wrj-li"></li>
+                <li class="wrj-li"></li>-->
             </ul>
             <button type="button" class="arrowbtn btnleft"></button>
             <button type="button" class="arrowbtn btnright"></button>
