--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
@@ -12,9 +12,7 @@
             <div class="sqzz-hax-lr1-pic"></div>
             <div class="wrj-left">
                 <ul class="wrj-ul">
-                    <li class="wrj-li"></li>
-                    <!--<li class="wrj-li"></li>
-                    <li class="wrj-li"></li>-->
+                    <li class="wrj-li prism-player"  id="recentFlyVideo"></li>
                 </ul>
                 <button type="button" class="arrowbtn btnleft"></button>
                 <button type="button" class="arrowbtn btnright"></button>
