产业园区--停车服务

--- a/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
@@ -1,7 +1,7 @@
 ﻿<!-- 招商雷达 -->
 <div id="left01_01" class="divbox divbox-ll clearfix" style="z-index:999;display:block;">
     <h3>
-        <div>招商雷达</div>
+        <div id="zsld-title">招商雷达</div>
     </h3>
     <div class="divcont zsld-cont">
         <div class="chartdiv zsld-chartdiv" style="height: 4rem;">
