--- a/Lingang.City.Brain/View/Industry/Garden/Left_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_First_02.html
@@ -1,7 +1,7 @@
 ﻿<!-- 企业top10列表 -->
 <div id="left01_02" class="divbox divbox-ll clearfix" style="top: 12.5rem;z-index:999;display:block;">
     <h3 class="hastabbox">
-        <div>企业top10列表</div>
+        <div id="qytop10-title">企业top10列表</div>
         <div class="charttabbox flex qytop10-tab"  style="line-height:.4rem;">
             <a class="charttab">对外投资(万)</a>
             <a class="charttab">注册资本(万)</a>
