--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
@@ -1,6 +1,6 @@
 ﻿<!-- 智慧能耗 -->
 <div id="right01_02" class="divbox divbox-rl clearfix cy-zhwy-rl2" style="top: 10rem;z-index:999;display:block;">
-    <h3><div>智慧能耗</div></h3>
+    <h3><div id="zhnh-title">智慧能耗</div></h3>
     <div class="divcont">
 
         <div class="cy-zhnh flex">
