--- a/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
@@ -1,6 +1,6 @@
 ﻿<!-- 事件统计 -->
 <div id="right02_01" class="divbox divbox-rr clearfix cy-ly-rr1" style="z-index:999;display:block;">
-    <h3><div>事件统计</div></h3>
+    <h3><div id="sjtj-title">事件统计</div></h3>
     <div class="divcont">
         <div class="flex sjxx-tab">
             <button type="button" class="active">总数：<span class="testAerial" id="parkingEnvent-total">20</span></button>
