--- a/Lingang.City.Brain/View/Industry/Garden/CompanyStatistic.html
+++ b/Lingang.City.Brain/View/Industry/Garden/CompanyStatistic.html
@@ -22,5 +22,15 @@
                 
             </ul>
         </div>
+        <!--<div class="pagination-box">
+            <div id="pagination-companylist">
+                <span class="current prev">上一页</span>
+                <span class="current">1</span>
+                <a style="cursor: pointer;">2</a>
+                <a style="cursor: pointer;">...</a>
+                <a style="cursor: pointer;">4</a>
+                <a class="next" style="cursor: pointer;">下一页</a>
+            </div>
+        </div>-->
     </div>
 </div>
