- refine parkinglot using by node following.

--- a/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
+++ b/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
@@ -65,7 +65,6 @@
 <div id="center_02" style="z-index:999;"></div>
 <div id="center_03" style="z-index:999;"></div>
 
-
 <!--------------------------------------------------------详情-------------------------------------------->
 <div id="detail_01" style="z-index:999;display:none;"></div>
 
@@ -77,6 +76,17 @@
 <div id="detail_societyplayer" style="display:none;"></div>
 <!--大客流视频播放内容-->
 <div id="detail_tourplayer" style="display:none;"></div>
+
+<!--------------------------------------------------------详情(窗口节点跟随用)-------------------------------------------->
+<div id="detail_1" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_2" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_3" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_4" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_5" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_6" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_7" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_8" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_9" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
 
 <!--------------------------------------------------------三维-------------------------------------------->
 <!--交通仿真-->
