--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -4,10 +4,11 @@
 html{ font-size: 90px; }
 body{
 	position: relative;
-	width: 7680px;
-	height: 2160px;
+	width: 11520px;
+	height: 3240px;
+    /*width: 7680px;
+	height: 2160px;*/
 	color:#fff;
-
 	font-family:"微软雅黑";
 	/*overflow: hidden;*/
 }
@@ -3559,6 +3560,80 @@ dd.pjc-statistic-star >form{
 .parking-li>em>i{
 	font-size: .38rem;
 	color: #f8d906;
+}
+
+/*停车场弹出信息*/
+.poi-box{
+	z-index: 9999;
+	position: absolute;
+	top:1rem;
+	left: 0;
+	min-width: 3em;
+	padding: .33em 0 .18em;
+	font-size: 170px;
+	background: 
+		url(../Content/images/poi-top.png) no-repeat,
+		url(../Content/images/poi-bottom.png) 0 100% no-repeat;
+	background-size: 100% .33em, 100% .18em;
+	box-sizing: border-box;
+}
+.poi-title{
+	position: absolute;
+	top: -.6em;
+	left: 0;
+	width: 100%;
+	font-size: .26em;
+	text-align: center;
+}
+.poi-cont{
+	position: relative;
+	padding:.4em 1.5em;
+	font-size: .22em;
+	background: url(../Content/images/poi-middle.png) repeat-y;
+	background-size:100% 100%;
+}
+.poi-li{
+	line-height: 1em;
+	margin-bottom: .6em;
+}
+.poi-li:last-child{ margin-bottom: 0; }
+
+.poi-li>em>i{
+	font-size: 1.2em;
+	color: #f8d906;
+}
+
+.poi-box2{ color: #40dfdd; }
+.poi-box3{ color: #8acae1; }
+
+.poi-box2 .poi-li>span,
+.poi-box3 .poi-li>span{ 
+	color: #fff; 
+}
+.poi-box2 .poi-li>em>i,
+.poi-box3 .poi-li>em>i{ 
+	color: inherit; 
+}
+
+.poi-box-num{
+	z-index: 999;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 1em;
+	font-size: 1rem;
+	color: #effcfc;
+	line-height: 1em;
+}
+.poi-box-num>div{
+	position: absolute;
+	top: 50%;
+	left: 100%;
+	font-size: .4em;
+	color: #2ec4e3;
+	line-height: 1em;
+	word-break: keep-all;
+	transform: translateY(-50%);
 }
 
 @media screen and (max-width: 11520px){
