--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3620,20 +3620,20 @@ dd.pjc-statistic-star >form{
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 1em;
-	font-size: 1rem;
+	font-size: 0.7rem;
 	color: #effcfc;
 	line-height: 1em;
 }
-.poi-box-num>div{
-	position: absolute;
-	top: 50%;
-	left: 100%;
-	font-size: .4em;
-	color: #2ec4e3;
+.poi-box-num>button{
+	font-size: inherit;
+	color: inherit;
+}
+.poi-box-num>button.poi-box-num-text{
+	width: 4em;
+	font-size: .35em;
+	color: #ba5afe;
+	text-align:left;
 	line-height: 1em;
-	word-break: keep-all;
-	transform: translateY(-50%);
 }
 
 @media screen and (max-width: 11520px){
