--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventPaidan.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventPaidan.html
@@ -1,5 +1,8 @@
 ﻿<div id="paidandetail" class="sqzz-sjjd-poi" style="left:69%;top:25%">
-    <div class="boxcont" id="paidandetail">
+    <div class="box-top">
+        <button type="button" class="box-close" onclick="require('s_Home').closeEventPaidan();"></button>
+    </div>
+    <div class="boxcont" id="ul_paidan">
         <dic class="sqzz-sjjd-div flex">
             <img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;">
             <ul class="sqzz-sjjd-list1">
