--- a/Lingang.City.Brain/Content/style.css
+++ b/Lingang.City.Brain/Content/style.css
@@ -1643,7 +1643,36 @@ dd.pjc-statistic-star >form{
 }
 
 
-
+.poibox3{ width: 10rem;}
+.poibox3-video{
+	height: 5rem;
+	background: url(../Content/images/sxt-videoli.png) no-repeat;
+	background-size: 100% 100%;
+}
+.poibox4{ width: 8.5rem;}
+.poibox4-list{
+	height: auto;
+	max-height: 12.2rem;
+}
+.poibox4-li{
+	padding: .16rem .3rem;
+	padding-right: 0;
+	box-sizing: border-box;
+	display: flex;
+}
+.poibox4-left{
+	width: 1.6rem;
+	margin-right: .15rem;
+}
+.poibox4-left>img{ width: 100%; height: 100%; }
+.poibox4-right{
+	width: calc(100% - 1.76rem);
+	font-size: .36rem;
+	line-height: .56rem;
+	word-break: keep-all;
+}
+.poibox4-right>div:first-child{ color: #04e6df; }
+.poibox4-right>div{ word-break: keep-all; }
 
 /*
 @media screen and (max-width: 1920px){
