--- a/Lingang.City.Brain/View/SocietyNew/Bottom_CameraDetail.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_CameraDetail.html
@@ -1,4 +1,4 @@
-﻿﻿<div class="poiinfo" style="left:55%;top:5rem;z-index:999;">
+﻿﻿<div id="s_cameradetail"class="poiinfo" style="left:55%;top:5rem;z-index:999;">
     <div class="box-top">
         摄像头
         <button type="button" class="box-close" onclick="require('s_Home').closeCameraDetial();"></button>
