- update index.html that added detail div container using for following window.

--- a/Lingang.City.Brain/Views/BigScreen/Index.cshtml
+++ b/Lingang.City.Brain/Views/BigScreen/Index.cshtml
@@ -81,6 +81,17 @@
 <!--大客流视频播放内容-->
 <div id="detail_tourplayer" style="display:none;"></div>
 
+<!--------------------------------------------------------详情(窗口节点跟随用)-------------------------------------------->
+<div id="detail_1" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_2" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_3" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_4" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_5" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_6" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_7" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_8" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+<div id="detail_9" style="z-index:980;position:absolute;left:-200px;top:-200px"></div>
+
 <!--------------------------------------------------------三维-------------------------------------------->
 <!--交通仿真-->
 <object id="DATACHANNEL" width=1 height=1 classid="CLSID:068FCD8B-5556-4d83-837F-CDCD9EBF4C00"></object>
