--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetail.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetail.html
@@ -1,5 +1,5 @@
 ﻿<!--事件详情-视频-->
-<div id="div_eventdetail" class="sqzz-sj-poi" style="left:49%;top:22%">
+<div id="div_eventdetail" class="sqzz-sj-poi poparrow" style="left:49%;top:22%">
     <div class="box-top">
         <span id="eventhead">事件005</span>
         <button type="button" class="box-close" onclick="require('s_Home').closeDetail();"></button>
