--- a/Lingang.City.Brain/Views/BigScreen/Index.cshtml
+++ b/Lingang.City.Brain/Views/BigScreen/Index.cshtml
@@ -76,6 +76,7 @@
 <div id="detail_02" style="z-index:999;display:none;"></div>
 <div id="detail_03" style="z-index:999;display:none;"></div>
 <div id="detail_04" style="z-index:999;display:none;"></div>
+<div id="detail_05" style="z-index:999;display:none;"></div>
 <!--社会综治视频播放内容-->
 <div id="detail_societyplayer" style="display:none;"></div>
 <!--大客流视频播放内容-->
