- refine main menu in top.

--- a/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
+++ b/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
@@ -10,15 +10,16 @@
     </div>*@
 <!-- 头部 -->
 <script data-main="@Url.Content("~/Scripts/Shared/Main_D")" type="text/javascript" src="~/Scripts/require.js"></script>    
+
 <div class="header clearfix" id="header_menu" style="z-index:999;display:none">
     <div class="header-leftmenu">
-        <button class="header-menu">数字星空</button>
+        <!-- <button class="header-menu">数字星空</button> -->
         <button class="header-menu active">社区综合</button>
         <button class="header-menu">景区管理</button>
-        <button class="header-menu">产业发展</button>
+        <!-- <button class="header-menu">产业发展</button> -->
     </div>
     <div class="header-rightmenu">
-        <button class="header-menu">产业推演</button>
+        <button class="header-menu">产业发展</button>
     </div>
 </div>
 
