--- a/Lingang.City.Brain/View/Industry/Estate/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Bottom_Menu.html
@@ -1,7 +1,7 @@
 ﻿<!-- 底部导航栏 -->
 <ul class="flex">
     <li class="active">产业信息</li>
-    <li class="">象限图谱</li>
+    <!-- <li class="">象限图谱</li> -->
     <li class="">人员分布</li>
     <li class="">园区信息</li>
 </ul>
