社综事件列表添加中间放大

--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -942,28 +942,45 @@ button.arrowbtn.btnright{
 	background: radial-gradient(currentcolor .06rem, transparent .06rem) center center no-repeat;
 	background-size: 100%;
 }
-
-.sjxx-tab{ margin:.4rem 0; }
+.sjcg-status-box{
+	height:.8rem;
+	margin:.4rem 0;
+}
+.sjxx-tab{ 
+	float:left;
+	width:calc(100% - 1.05rem);
+	height:100%;
+	margin:.4rem 0; 
+}
+.sjcg-status-box .sjxx-tab{ margin:0; }
 .sjxx-tab>button{
-	/*width: 3.5rem;*/
-	height: 1rem;
+	height:100%;
 	flex-grow: 1;
-	margin-right: .3rem;
+	margin-right: .15rem;
 	border-radius: .06rem;
-	font-size: .4rem;
+	font-size: .35rem;
 	padding-left: .25rem;
 	text-align: left;
 	color: #fff;
-	box-shadow: 0 0 .2rem rgba(14,160,156,.75);
+	box-shadow: 0 0 .1rem rgba(14,160,156,.75);
 }
-#sjcg-status > button { padding-left:.2rem;}
+#sjcg-status > button { padding:0 .2rem;}
 .sjxx-tab>button:last-child{ margin-right: 0; }
-.sjxx-tab>button>span{ color: #f98d02; font-size:.5rem; }
-
+.sjxx-tab>button>span{ color: #f98d02; font-size:.4rem; }
 .sjxx-tab>button.active{
 	background: rgba(249,107,2,.6);
-	box-shadow: 0 0 .2rem rgba(249,107,2,.75);
+	box-shadow: 0 0 .1rem rgba(249,107,2,.75);
 }
+#center-eventlist-btn{
+	width:.9rem;
+	height:100%;
+	float:right;
+	color:#fff;
+	font-size:.3rem;
+	border-radius:.06rem;
+	box-shadow:inset 0 0 .5rem rgba(14,160,156,.75);
+}
+
 .scrolldiv{
 	position: relative;
 	width: 100%;
@@ -993,7 +1010,11 @@ button.arrowbtn.btnright{
 	padding-left: .8rem;
 	line-height: 1.2em;
 }
-.sjxx-time>span{ margin-left: .15rem; }
+.sjxx-time>span{ 
+	float:right;
+	width:5em;
+	text-align:right;
+}
 
 .sjxx-li:hover,
 .sjxx-li.active{
@@ -3676,15 +3697,86 @@ dd.pjc-statistic-star >form{
 	background-size: 100% 100%;
 	transform: translate(-50%, -.2rem) rotate(90deg);
 }
+
+/*.center-eventlist*/
+.center-eventlist{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 25rem;
+	height: 16rem;
+	transform: translate(-50%,-50%);
+	background: rgba(2,16,38,.7);
+	border-radius: .2rem;
+    box-shadow:0px 0px 0.5rem rgba(255,255,255,0.3);
+}
+.center-eventlist .box-top{
+	height: 1.5rem;
+	line-height: 1.5rem;
+	font-size: .8rem;
+}
+.center-eventlist .box-close{
+	top: .3rem;
+	right: .3rem;
+	width: .8rem;
+	height: .8rem;
+	background-size: .5rem;
+}
+.center-event-tabbox{
+	padding: 0 .3rem;
+	height: 1rem;
+	box-sizing: border-box;
+}
+.center-event-tab{
+	float: left;
+	height: 100%;
+    margin-left: .1rem;
+    padding: 0 .5rem;
+    background: #0399c2;
+    font-size: .5rem;
+    color: #fff;
+    border-radius: .1rem;
+    box-sizing: border-box;
+}
+.center-event-tab:hover,
+.center-event-tab.active{
+	background-color: #f90;
+}
+.center-event-itembox{
+	padding:.3rem;
+	height: calc(100% - 2.5rem);
+	box-sizing: border-box;
+}
+.center-event-sociul {
+	height: auto;
+	max-height: 100%; 
+}
+.center-event-li{
+	font-size: .4rem;
+	color: #ccd4e9;
+	padding: .2em;
+	margin-top: .5em;
+}
+.center-event-li:first-child{ margin-top: 0; }
+.center-event-li-line1{ 
+	color: #1a8fef;
+	line-height: 1.5em;
+}
+.center-event-li .sjxx-time>span{ 
+	float: right;
+	width: 5em;
+	text-align: right;
+	margin-left: 0; 
+}
+
+
+
+
 @media screen and (max-width: 11520px){
-
 	html{ font-size:130px;}
-
 }
 @media screen and (max-width: 7680px) {
-    html {
-        font-size: 90px;
-    }
+    html { font-size: 90px; }
 }
 
 
