--- a/Lingang.City.Brain/Views/BigScreen/Index.cshtml
+++ b/Lingang.City.Brain/Views/BigScreen/Index.cshtml
@@ -67,6 +67,7 @@
 <div id="center_01" style="z-index:999;"></div>
 <div id="center_02" style="z-index:999;"></div>
 <div id="center_03" style="z-index:999;"></div>
+<div id="center_04" style="z-index:999;"></div>
 
 
 <!--------------------------------------------------------详情-------------------------------------------->
