--- a/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
+++ b/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
@@ -65,6 +65,7 @@
 <div id="center_01" style="z-index:999;"></div>
 <div id="center_02" style="z-index:999;"></div>
 <div id="center_03" style="z-index:999;"></div>
+<div id="center_04" style="z-index:999;"></div>
 
 <!--------------------------------------------------------详情-------------------------------------------->
 <div id="detail_01" style="z-index:999;display:none;"></div>
