--- a/Lingang.City.Brain/View/SocietyNew/Center_04.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_04.html
@@ -3,7 +3,7 @@
     <span>事件列表</span>
     <button type="button" class="box-close"  onclick="require('s_Echart').closeCenterEventList();"></button>
   </div>
-  <div class="center-event-tabbox clearfix">
+  <div class="center-event-tabbox clearfix" id="center-event-tabsoci">
     <button type="button" class="center-event-tab active">近三天</button>
     <button type="button" class="center-event-tab">近一周</button>
     <button type="button" class="center-event-tab">近一月</button>
