添加了停车场详情关闭按钮以及中控台操作

--- a/Lingang.City.Brain/View/Industry/Garden/UnmannedCarDetail.html
+++ b/Lingang.City.Brain/View/Industry/Garden/UnmannedCarDetail.html
@@ -2,6 +2,7 @@
 
 <div class="poi-guiji" id="center01_01" style="right:25rem;position:absolute;top:5rem;padding:.5rem .3rem;box-sizing:border-box;">
     <div class="boxcont">
+        <!--<button class="box-close" onclick="require('g_Home').closeBuildingDetail();"></button>-->
         <dic class="sqzz-sjjd-div flex">
             <img src="Content/images/personCardIMG.png" id="personIMG" style="width: 1.4rem; height: 1.7rem; margin-right: .2rem;">
             <ul class="sqzz-sjjd-list1" style="width:calc(100% - 1.6rem); line-height:.58rem;">
