--- a/Lingang.City.Brain/View/Industry/Garden/ParkingLotDetail.html
+++ b/Lingang.City.Brain/View/Industry/Garden/ParkingLotDetail.html
@@ -2,7 +2,9 @@
 
 <div class="parking-box"  id="center01_01" style="right:37.5rem;top:12rem;">
     <div class="parking-title" id="placeName">港城新天地</div>
+    <button class="box-close" onclick="require('g_Home').closeParkingDetail();" style="top:0.1rem;right:-0.3rem;"></button>
     <div class="parking-cont">
+       
         <ul class="parkinbg-ul">
             <li class="parking-li"><span>总车位数：</span><em><i id="TotalParkingLot">857</i>位</em></li>
             <li class="parking-li"><span>空余车位：</span><em><i id="EmptyParkingLot">350</i>位</em></li>
