--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
@@ -1,13 +1,13 @@
-﻿<div class="poiinfo" id="div_eventdetail" style="z-index:999; position:absolute; left:32%; top:19%;display:block;width:15rem">
+﻿<div class="poiinfo" id="div_eventdetail" style="z-index:999; position:absolute; left:32%; top:19%;display:block;">
     <div class="box-top" >
         <span id="eventhead">事件005</span>
         <button type="button" class="box-close" onclick="require('s_Home').closeDetail();"></button>
     </div>
-    <div class="boxcont clearfix" id="eventdetail">
+    <div class="boxcont flex" id="eventdetail">
         <div class="box-leftpic fl" style="text-align:center;">
             <img src="Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" style="width:3rem;" />
         </div>
-        <dic class="box-rightinfo fl" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
+        <dic class="box-rightinfo fl scrolldiv" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
             <ul>
                 <li><span>事件时间：</span><em>2019-03-20 23:10:48</em></li>
                 <li><span>事件地点：</span><em>临港大道两港大道以东200米</em></li>
