战略新兴产业

--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
@@ -3,7 +3,7 @@
     <h3>
         <div>战略新兴产业结构</div>
     </h3>
-    <div class="divcont zlxxcyjg-cont">
+    <div class="divcont zlxxcyjg-cont" id="zlxxcyjg">
         <ul class="zlxxcyjg-list zlxxcyjg-list-left">
             <li class="zlxxcyjg-li" data-text="5.67%">节能环保产业</li>
             <li class="zlxxcyjg-li" data-text="15.63%">高端装备铸造产业</li>
