--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid2.html
@@ -9,11 +9,11 @@
             </li>
             <li class="czajlb-li">
                 <div class="item-l"><div class="czajlb-circlediv flex" data-text="32%"></div></div>
-                <div class="item-r"><div class="item-r-name">部件类</div><div class="item-r-data testAerial">8359</div></div>
+                <div class="item-r"><div class="item-r-name">事件类</div><div class="item-r-data testAerial">8359</div></div>
             </li>
             <li class="czajlb-li">
                 <div class="item-l"><div class="czajlb-circlediv flex" data-text="28%"></div></div>
-                <div class="item-r"><div class="item-r-name">部件类</div><div class="item-r-data testAerial">4722</div></div>
+                <div class="item-r"><div class="item-r-name">服务热线类</div><div class="item-r-data testAerial">4722</div></div>
             </li>
         </ul>
     </div>
